moved to /greenpost

--- a/greenpost/package.json
+++ b/greenpost/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "material",
-  "version": "0.0.0",
+  "name": "greenpost",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
