--- a/greenpost/package.json
+++ b/greenpost/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "6.0.3",
     "@swimlane/ngx-charts": "^7.0.1",
     "@swimlane/ngx-datatable": "^11.1.5",
+    "@types/googlemaps": "^3.30.11",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
