--- a/greenpost/package.json
+++ b/greenpost/package.json
@@ -28,6 +28,8 @@
     "@swimlane/ngx-charts": "^7.0.1",
     "@swimlane/ngx-datatable": "^11.1.5",
     "@types/googlemaps": "^3.30.11",
+    "@angular/material-moment-adapter": "^6.4.2",
+    "moment": "2.22.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
